data/derived/comb/progs/unify/prog1264.ml.out
Characters 38-56:
  if n >0 then (digitsOfInt n/10)@[n mod 10]
               ^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
